ci: auto-upload release jars

--- a/website/index.html
+++ b/website/index.html
@@ -40,6 +40,7 @@
         <a href="#overview">Overview</a>
         <a href="#quickstart">Quickstart</a>
         <a href="#versioning">Versioning</a>
+        <a href="#migration">Migration</a>
         <a href="#reference">Reference</a>
         <a href="#tutorials">Tutorials</a>
         <a href="#best-practices">Best Practices</a>
@@ -89,6 +90,25 @@
             <li><a href="../docs/api/v1.0.0.md">API Contract v1.0.0</a></li>
             <li><a href="../docs/migrations/v1.0.md">Migration Guide v1.0</a></li>
             <li><a href="../CHANGELOG.md">Changelog</a></li>
+          </ul>
+        </article>
+      </section>
+
+      <section id="migration" class="doc-section reveal" data-api-item="migration upgrade compatibility 1.0 1.1 changelog checklist">
+        <div class="section-head">
+          <p class="eyebrow">MIGRATION</p>
+          <h2>Upgrade Paths</h2>
+        </div>
+        <article class="api-card">
+          <p>
+            Use these guides when moving plugins between versions.
+            For `1.0 -> 1.1`, most changes are additive, but you should still validate event/command behavior and diagnostics.
+          </p>
+          <ul>
+            <li><a href="../docs/migrations/v1.0.md">Migration Guide v1.0</a></li>
+            <li><a href="../docs/migrations/checklist-1.0.md">Migration Checklist v1.0</a></li>
+            <li><a href="../CHANGELOG.md">Changelog (all changes)</a></li>
+            <li><a href="../docs/ops/roadmap-1.1.md">Roadmap 1.1</a></li>
           </ul>
         </article>
       </section>
